Fix #3059 - Remove quarkus-kubernetes extension from SonataFlow builder image
Signed-off-by: Ricardo Zanini <ricardozanini@gmail.com>

--- a/packages/sonataflow-builder-image/resources/modules/sonataflow/builder/runtime/community/module.yaml
+++ b/packages/sonataflow-builder-image/resources/modules/sonataflow/builder/runtime/community/module.yaml
@@ -19,7 +19,7 @@
 schema_version: 1
 name: org.kie.sonataflow.builder.runtime.community
 version: "main"
-description: "Sonataflow builder runtime module"
+description: "Apache KIE SonataFlow builder runtime module"
 
 artifacts:
   - image: builder
