--- a/packages/sonataflow-builder-image/resources/incubator-kie-sonataflow-builder-image.yaml
+++ b/packages/sonataflow-builder-image/resources/incubator-kie-sonataflow-builder-image.yaml
@@ -36,7 +36,7 @@
 - name: "docker.io/apache/incubator-kie-sonataflow-builder"
   from: "registry.access.redhat.com/ubi8/openjdk-17:1.21"
   version: "main"
-  description: "Kogito Serverless Workflow base builder with Quarkus extensions libraries preinstalled"
+  description: "Apache KIE SonataFlow base builder with Quarkus extensions libraries preinstalled"
 
   labels:
     - name: "io.openshift.s2i.scripts-url"
@@ -50,11 +50,11 @@
     - name: "maintainer"
       value: "Apache KIE <dev@kie.apache.org>"
     - name: "io.k8s.description"
-      value: "Sonataflow base builder with Quarkus extensions libraries preinstalled."
+      value: "Apache KIE SonataFlow base builder with Quarkus extensions libraries preinstalled."
     - name: "io.k8s.display-name"
-      value: "Sonataflow Builder"
+      value: "Apache KIE SonataFlow Builder"
     - name: "io.openshift.tags"
-      value: "kogito,builder,serverless,workflow"
+      value: "sonataflow,kogito,kie,builder,serverless,workflow"
 
   modules:
     repositories:
