--- a/packages/dev-deployment-quarkus-blank-app/pom.xml
+++ b/packages/dev-deployment-quarkus-blank-app/pom.xml
@@ -30,10 +30,10 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.kie.kogito</groupId>
-  <artifactId>dev-deployment-kogito-quarkus-blank-app</artifactId>
+  <artifactId>dev-deployment-quarkus-blank-app</artifactId>
   <version>${revision}</version>
 
-  <name>KIE Tools :: KIE Sandbox :: Dev deployment Kogito Quarkus blank app</name>
+  <name>KIE Tools :: KIE Sandbox :: Dev deployment Quarkus blank app</name>
 
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
