[sonataflow-opoerator] NO-ISSUE: Add DbMigrator Env to SonataFlow Operator envs
Signed-off-by: Ricardo Zanini <ricardozanini@gmail.com>

--- a/packages/sonataflow-operator/package.json
+++ b/packages/sonataflow-operator/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@kie-tools/kogito-db-migrator-tool-image": "workspace:*",
     "@kie-tools/python-venv": "workspace:*",
     "@kie-tools/root-env": "workspace:*",
     "@kie-tools/sonataflow-builder-image": "workspace:*",
