--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -151,6 +151,7 @@ jobs:
         env:
           KIE_TOOLS_BUILD__buildContainerImages: ${{ runner.os == 'Linux' }}
           KIE_TOOLS_BUILD__buildExamples: "true"
+          NODE_OPTIONS: "--max_old_space_size=6144"
           MAVEN_ARGS: "-B -Puse-maven-repo-local-tail"
           MAVEN_OPTS: "-Xmx2g"
         run: |
