--- a/packages/runtime-tools-management-console-webapp/dev-webapp/unsecured-runtime/pom.xml
+++ b/packages/runtime-tools-management-console-webapp/dev-webapp/unsecured-runtime/pom.xml
@@ -33,7 +33,7 @@
   <!-- This is a development app. It's better that we use an arbitrary string to not make this more complicated than it has to be. -->
   <artifactId>management-console-dev-webapp-runtime</artifactId>
   <name>KIE Tools :: Management Console Web App :: Unsecured Runtime</name>
-  <version>${revision}</version>
+  <version>999-dev</version>
 
   <dependencyManagement>
     <dependencies>
