--- a/packages/uniforms-patternfly/package.json
+++ b/packages/uniforms-patternfly/package.json
@@ -31,7 +31,6 @@
     "@types/invariant": "^2.2.35",
     "invariant": "^2.2.4",
     "lodash": "^4.17.21",
-    "monaco-editor": "^0.39.0",
     "uniforms": "^3.10.2"
   },
   "devDependencies": {
@@ -41,6 +40,7 @@
     "@kie-tools/jest-base": "workspace:*",
     "@kie-tools/root-env": "workspace:*",
     "@kie-tools/tsconfig": "workspace:*",
+    "@patternfly/react-code-editor": "5.4.3",
     "@patternfly/react-core": "^5.4.1",
     "@patternfly/react-icons": "^5.4.1",
     "@testing-library/jest-dom": "^6.4.6",
