--- a/packages/dmn-editor-envelope/package.json
+++ b/packages/dmn-editor-envelope/package.json
@@ -24,7 +24,6 @@
     "start": "run-script-os",
     "start:linux:darwin": "cross-env STORYBOOK_PORT=$(build-env dmnEditorEnvelope.storybook.port) pnpm kie-tools--storybook --storybookArgs=\"dev --no-open\"",
     "start:win32": "pnpm powershell \"cross-env STORYBOOK_PORT=$(build-env dmnEditorEnvelope.storybook.port) pnpm kie-tools--storybook --storybookArgs='dev --no-open'",
-    "test": "run-script-if --ignore-errors \"$(build-env tests.ignoreFailures)\" --bool \"$(build-env tests.run)\" --then \"jest --silent --verbose --passWithNoTests\"",
     "test-e2e": "run-script-if --ignore-errors \"$(build-env endToEndTests.ignoreFailures)\" --bool \"$(build-env endToEndTests.run)\" --then \"pnpm test-e2e:condition\"",
     "test-e2e:condition": "run-script-if --bool \"$(build-env endToEndTests.containerized)\" --then  \"pnpm rimraf ./dist-tests-e2e\" \"pnpm test-e2e:container:start\" --else \"pnpm rimraf ./dist-tests-e2e\" \"pnpm test-e2e:run\"",
     "test-e2e:container:bash": "docker exec -it kie-tools-playwright-containerization-dmn-editor-envelope /bin/bash -c \"cd incubator-kie-tools/packages/dmn-editor-envelope && exec /bin/bash\"",
@@ -75,6 +74,7 @@
     "@types/react-dom": "^17.0.5",
     "rimraf": "^3.0.2",
     "run-script-os": "^1.1.6",
+    "start-server-and-test": "^2.0.3",
     "storybook": "^7.3.2",
     "typescript": "^5.5.3",
     "webpack": "^5.94.0",
