[sonataflow-images] Fix #3124 - Add support to Quarkus Registry and cache it for offline use
Signed-off-by: Ricardo Zanini <ricardozanini@gmail.com>

--- a/packages/sonataflow-builder-image/resources/incubator-kie-sonataflow-builder-image.yaml
+++ b/packages/sonataflow-builder-image/resources/incubator-kie-sonataflow-builder-image.yaml
@@ -67,7 +67,8 @@
       - name: org.kie.kogito.maven.common
       - name: org.kie.kogito.project.versions
       - name: org.kie.sonataflow.common.scripts
-      - name: org.kie.sonataflow.builder.runtime.community
+      - name: org.kie.sonataflow.common.quarkus.registry
+      - name: org.kie.sonataflow.builder.runtime
 
   run:
     workdir: "/home/kogito/${PROJECT_ARTIFACT_ID}"
