--- a/packages/sonataflow-image-common/resources/modules/sonataflow/common/quarkus/registry/module.yaml
+++ b/packages/sonataflow-image-common/resources/modules/sonataflow/common/quarkus/registry/module.yaml
@@ -17,11 +17,17 @@
 # under the License.
 #
 schema_version: 1
-name: org.kie.sonataflow.common.build
+name: org.kie.sonataflow.common.quarkus.registry
 version: "main"
-description: "Kogito Serverless Workflow image build process"
+description: "SonataFlow Images Quarkus Registry Module"
 
-# Requires org.kie.sonataflow.common.scripts module
+envs:
+  - name: QUARKUS_REGISTRY_CONFIG_PATH
+    description: >-
+      Optional path to a custom Quarkus registry configuration file inside the image.
+      If set, the builder/devmode will copy this file to $HOME/.quarkus/config.yaml before the build begins.
+      Useful for overriding the default registry behavior in offline or custom registry scenarios.
+    example: ./resources/.quarkus/config.yaml"
 
 execute:
   - script: configure.sh
