--- a/packages/sonataflow-builder-image/resources/modules/sonataflow/builder/runtime/module.yaml
+++ b/packages/sonataflow-builder-image/resources/modules/sonataflow/builder/runtime/module.yaml
@@ -17,7 +17,7 @@
 # under the License.
 #
 schema_version: 1
-name: org.kie.sonataflow.builder.runtime.community
+name: org.kie.sonataflow.builder.runtime
 version: "main"
 description: "Apache KIE SonataFlow builder runtime module"
 
