--- a/packages/dmn-editor-envelope/package.json
+++ b/packages/dmn-editor-envelope/package.json
@@ -72,6 +72,7 @@
     "@storybook/react-webpack5": "^7.3.2",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
+    "cross-env": "^7.0.3",
     "rimraf": "^3.0.2",
     "run-script-os": "^1.1.6",
     "start-server-and-test": "^2.0.3",
