--- a/packages/dmn-editor-envelope/package.json
+++ b/packages/dmn-editor-envelope/package.json
@@ -39,8 +39,11 @@
     "@kie-tools-core/editor": "workspace:*",
     "@kie-tools-core/envelope": "workspace:*",
     "@kie-tools-core/envelope-bus": "workspace:*",
+    "@kie-tools-core/i18n": "workspace:*",
     "@kie-tools-core/keyboard-shortcuts": "workspace:*",
+    "@kie-tools-core/monaco-editor": "workspace:*",
     "@kie-tools-core/notifications": "workspace:*",
+    "@kie-tools-core/operating-system": "workspace:*",
     "@kie-tools-core/react-hooks": "workspace:*",
     "@kie-tools-core/vscode-java-code-completion": "workspace:*",
     "@kie-tools-core/workspace": "workspace:*",
@@ -70,13 +73,18 @@
     "@storybook/preview-api": "^7.3.2",
     "@storybook/react": "^7.3.2",
     "@storybook/react-webpack5": "^7.3.2",
+    "@types/lodash": "^4.14.168",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
     "cross-env": "^7.0.3",
+    "css-loader": "^5.2.6",
+    "lodash": "^4.17.21",
     "rimraf": "^3.0.2",
     "run-script-os": "^1.1.6",
+    "sass-loader": "^12.3.0",
     "start-server-and-test": "^2.0.3",
     "storybook": "^7.3.2",
+    "style-loader": "^2.0.0",
     "typescript": "^5.5.3",
     "webpack": "^5.94.0",
     "webpack-cli": "^4.10.0",
