--- a/packages/dev-deployment-quarkus-blank-app/src/main/resources/application.properties
+++ b/packages/dev-deployment-quarkus-blank-app/src/main/resources/application.properties
@@ -60,6 +60,10 @@ quarkus.datasource.db-kind=h2
 quarkus.datasource.username=kie
 quarkus.datasource.jdbc.url=jdbc:h2:mem:default;NON_KEYWORDS=VALUE,KEY
 
+# Disabling Hibernate schema generation
+quarkus.hibernate-orm.database.generation=none
+quarkus.hibernate-orm.validate-in-dev-mode=false
+
 ############
 # Security #
 ############
