--- a/packages/sonataflow-operator/package.json
+++ b/packages/sonataflow-operator/package.json
@@ -28,8 +28,11 @@
     "image:build:darwin:linux": ". ./node_modules/@kie-tools/python-venv/venv/bin/activate && run-script-if --bool \"$(build-env containerImages.build)\" --then \"make container-build\"",
     "image:build:win32": "echo 'Image build not supported on Windows'",
     "image:bundle:build": "run-script-os",
-    "image:bundle:build:darwin:win32": "echo 'Build Operator bundle image not supported on Windows and macOS'",
-    "image:bundle:build:linux": ". ./node_modules/@kie-tools/python-venv/venv/bin/activate && run-script-if --bool \"$(build-env containerImages.build)\" --then \"make bundle bundle-build\"",
+    "image:bundle:build:darwin:linux": ". ./node_modules/@kie-tools/python-venv/venv/bin/activate && run-script-if --bool \"$(build-env containerImages.build)\" --then \"make bundle bundle-build\"",
+    "image:bundle:build:win32": "echo 'Build Operator bundle image not supported on Windows'",
+    "image:catalog:build": "run-script-os",
+    "image:catalog:build:darwin:linux": ". ./node_modules/@kie-tools/python-venv/venv/bin/activate && run-script-if --bool \"$(build-env containerImages.build)\" --then \"make catalog-build\"",
+    "image:catalog:build:win32": "echo 'Build Operator catalog image not supported on Windows'",
     "install": "run-script-os",
     "install:darwin:linux": "rimraf bin && go work sync && go mod tidy && pnpm controllers:update:cfg && pnpm format",
     "install:win32": "echo 'Install not supported on Windows'",
