--- a/packages/sonataflow-image-common/resources/modules/kogito-maven/common/module.yaml
+++ b/packages/sonataflow-image-common/resources/modules/kogito-maven/common/module.yaml
@@ -27,13 +27,16 @@ envs:
   - name: "MAVEN_HOME"
     value: "/usr/share/maven"
   - name: "MAVEN_CMD"
-    value: "/usr/share/maven/bin/mvnw"
+    value: "/usr/share/maven/bin/mvn"
   - name: "MAVEN_SETTINGS_PATH"
     description: "The location of the settings.xml file"
     value: "${KOGITO_HOME}/.m2/settings.xml"
   - name: "MAVEN_CONTAINER_BUILD_SETTINGS_PATH"
     description: "The location of the settings.xml file during container image build"
     value: "${KOGITO_HOME}/.m2/maven-m2-repo-via-http-settings.xml"
+  - name: "KOGITO_MAVEN_HOME"
+    description: "Path to the Maven installation used by the image"
+    value: "/usr/share/apache-maven-3.8.6"
   - name: "HTTP_PROXY"
     description: "The location of the http proxy, will be used for both Maven builds and Java runtime."
     example: "http://127.0.0.1:8080"
@@ -48,7 +51,7 @@ envs:
   - name: "HTTP_PROXY_USERNAME"
     description: "Proxy Username"
   - name: "HTTP_PROXY_NONPROXYHOSTS"
-    description: "Non proxy hosts, list of hosts that will ot be proxied."
+    description: "Non proxy hosts, list of hosts that will not be proxied."
     example: "localhost"
   - name: "MAVEN_MIRROR_URL"
     description: "The base URL of a mirror used for retrieving artifacts."
