--- a/packages/sonataflow-image-common/resources/modules/kogito-maven/common/module.yaml
+++ b/packages/sonataflow-image-common/resources/modules/kogito-maven/common/module.yaml
@@ -34,8 +34,8 @@ envs:
   - name: "MAVEN_CONTAINER_BUILD_SETTINGS_PATH"
     description: "The location of the settings.xml file during container image build"
     value: "${KOGITO_HOME}/.m2/maven-m2-repo-via-http-settings.xml"
-  - name: "KOGITO_MAVEN_HOME"
-    description: "Path to the Maven installation used by the image"
+  - name: "ALTERNATIVE_MAVEN_HOME"
+    description: " (Temporary Fix) Path to the alternative Maven installation until a new base image with Maven 3.9 is available."
     value: "/usr/share/apache-maven-3.8.6"
   - name: "HTTP_PROXY"
     description: "The location of the http proxy, will be used for both Maven builds and Java runtime."
