--- a/packages/dmn-marshaller-backend-compatibility-tester/package.json
+++ b/packages/dmn-marshaller-backend-compatibility-tester/package.json
@@ -22,8 +22,8 @@
   "scripts": {
     "build:dev": "rimraf dist dist-m2 && tsc -p tsconfig.json && pnpm prefetch",
     "build:prod": "pnpm build:dev",
-    "prefecth:darwin:linux": "cross-env JBANG_REPO=$(node -p \"require('path').resolve('dist-m2')\") node dist/dependenciesFetch.js",
     "prefetch": "run-script-os",
+    "prefetch:darwin:linux": "cross-env JBANG_REPO=$(node -p \"require('path').resolve('dist-m2')\") node dist/dependenciesFetch.js",
     "prefetch:win32": "pnpm powershell \"cross-env JBANG_REPO=$(node -p \\\"require('path').resolve('dist-m2')\\\") node dist/dependenciesFetch.js\""
   },
   "dependencies": {
