[kogito-data-index-images] Fix kie-issues#1981 - Add Data Index UI to Images; Small install.js refactor
Signed-off-by: Ricardo Zanini <ricardozanini@gmail.com>

--- a/packages/kogito-data-index-ephemeral-image/package.json
+++ b/packages/kogito-data-index-ephemeral-image/package.json
@@ -39,6 +39,7 @@
     "@kie-tools/python-venv": "workspace:*",
     "@kie-tools/root-env": "workspace:*",
     "@kie-tools/sonataflow-image-common": "workspace:*",
+    "@kie/kogito-images-install-helper": "workspace:*",
     "cross-env": "^7.0.3",
     "replace-in-file": "^7.1.0",
     "rimraf": "^3.0.2",
