First working CodeEditorTextField

--- a/packages/runtime-tools-swf-enveloped-components/package.json
+++ b/packages/runtime-tools-swf-enveloped-components/package.json
@@ -37,17 +37,14 @@
     "@kie-tools-core/operating-system": "workspace:*",
     "@kie-tools-core/patternfly-base": "workspace:*",
     "@kie-tools/dashbuilder-client": "workspace:*",
-    "@kie-tools/dmn-runner": "workspace:*",
-    "@kie-tools/form-dmn": "workspace:*",
     "@kie-tools/i18n-common-dictionary": "workspace:*",
     "@kie-tools/runtime-tools-components": "workspace:*",
     "@kie-tools/runtime-tools-shared-gateway-api": "workspace:*",
     "@kie-tools/runtime-tools-swf-gateway-api": "workspace:*",
     "@kie-tools/serverless-workflow-combined-editor": "workspace:*",
-    "@kie-tools/uniforms-patternfly": "^10.0.0",
+    "@kie-tools/sonataflow-uniforms": "workspace:*",
     "@microlink/react-json-view": "^1.24.0",
     "@patternfly/patternfly": "^5.4.1",
-    "@patternfly/react-code-editor": "5.4.3",
     "@patternfly/react-core": "^5.4.1",
     "@patternfly/react-icons": "^5.4.1",
     "@patternfly/react-table": "^5.4.1",
@@ -59,8 +56,6 @@
     "react-helmet": "^6.1.0",
     "react-moment": "0.9.7",
     "react-pure-loaders": "^3.0.1",
-    "uniforms": "^3.10.2",
-    "uniforms-bridge-json-schema": "^3.10.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
