NO-ISSUE: Replace Cekit Behave 'serve pages' with 'curl'
Signed-off-by: Ricardo Zanini <ricardozanini@gmail.com>

--- a/packages/sonataflow-devmode-image/package.json
+++ b/packages/sonataflow-devmode-image/package.json
@@ -28,8 +28,8 @@
     "image:build:darwin:linux": "pnpm setup:env make -C ./build build",
     "image:build:win32": "echo \"Build skipped on Windows\"",
     "image:test": "run-script-if --ignore-errors \"$(build-env tests.ignoreFailures)\" --bool \"$(build-env endToEndTests.run)\" --then \"mkdir -p build/target/test/results\" \"run-script-os\" --finally \"cp -R build/target/test/results dist-tests-e2e/\"",
-    "image:test:darwin:win32": "echo \"Tests skipped on macOS and Windows\"",
-    "image:test:linux": "pnpm copy-test-assets && pnpm setup:env make -C ./build test-image",
+    "image:test:darwin:linux": "pnpm copy-test-assets && pnpm setup:env make -C ./build test-image",
+    "image:test:win32": "echo \"Tests skipped on Windows\"",
     "install": "node install.js && pnpm format",
     "m2-repo-via-http:container:kill": "(docker container kill m2-repo-via-http || true) && (docker container rm m2-repo-via-http || true)",
     "m2-repo-via-http:container:prepare-m2-repo-volume": "node -e 'require(`@kie-tools/maven-base`).prepareHardLinkedM2ForPackage(`./dist/tmp-m2/repository`, `./node_modules/@kie-tools/sonataflow-quarkus-devui`)'",
